added functions to .ts and removed some html tags

--- a/Lit.Client/Lit.Client.App/src/app/booklist/booklist.component.css
+++ b/Lit.Client/Lit.Client.App/src/app/booklist/booklist.component.css
@@ -1,5 +1,5 @@
 .table{
-    background-color: black;
+    background-color: yellowgreen;
     display:fles;
     margin: 100pt;
     width: fit-content;
