--- a/Lit.Client/Lit.Client.App/src/app/booklist/booklist.component.html
+++ b/Lit.Client/Lit.Client.App/src/app/booklist/booklist.component.html
@@ -1,35 +1,38 @@
-<!DOCTYPE html>
-<html>
 <head>
     <link rel="stylesheet" href = "booklist.component.css">
 </head>
+
+<body class="BG" onload="getAllBooksAsynAwait()">
+
 <header>
     <h1> NAVBAR </h1>
 </header>
 
-<body>
+
 
 <h1>This is where I'd put my table of books... IF I HAD ONE !!!!!</h1>
 <p> or could get it lol</p>
 
-<div class="table">
-<table>
-    <tr class="records">
+<div class="tableDiv">
+<table id = "book-table" class="table table-striped table-hover">
+    <thead>
       <th>Book Name</th>
       <th>Author</th>
       <th>Publish date</th>
       <th>Book details</th>
-    </tr>
-    <tr class="records">
+    </thead>
+    <tbody>
+      <tr class="records">
         <th>The name of the wind</th>
         <th>Peter Rothfuss</th>
-        <th>200s</th>
+        <th>2000s</th>
         <th>amazing book</th>
     </tr>
-    
+    </tbody>
   </table>
 </div>
+<script>src = "booklist.component.ts"</script>
 
 </body>
 
-</html>
+
