--- a/Lit.Client/Lit.Client.App/src/app/book-detail/book-detail.component.html
+++ b/Lit.Client/Lit.Client.App/src/app/book-detail/book-detail.component.html
@@ -7,13 +7,14 @@
             <div class="card-body">
                 <h6 class="card-title text-coral">Details</h6>
                 <p class="card-text text-muted">ISBN: 00000000000</p>
-                <p class="card-text"> Views: 837589  👀 </p>
                 <p class="card-text text-coral">Category: Mystery</p>
                 <hr>
                 <h4 class="mb-3 text-coral">Review</h4>
                 <p class="card-text">
-                    Overall, "The Silent Forest" is a captivating read that will leave readers spellbound from beginning to end. Harper's masterful storytelling and enchanting world-building make this book a must-read for fantasy lovers of all ages.</p>
-                <a href="#" class="btn btn-primary">Add to Wishlist</a>
+                    Overall, "The Silent Forest" is a captivating read that will leave readers spellbound from beginning
+                    to end. Harper's masterful storytelling and enchanting world-building make this book a must-read for
+                    fantasy lovers of all ages.</p>
+                <a href= "#" class="btn btn-primary">Add to Wishlist</a>
             </div>
         </div>
     </div>
