--- a/Lit.Client/Lit.Client.App/src/app/app.component.html
+++ b/Lit.Client/Lit.Client.App/src/app/app.component.html
@@ -1,15 +1,2 @@
-
- 
-  <header>
-    <app-navbar></app-navbar>
-  </header>
- <div class="logo">
-  <img src="../assets/book-logo.jpg" alt="book logo" width="250pt" height="250pt">
-  <h1 >Lit</h1>
-  <p>Welcome to our Book App, here you can track books you've read or explore our storefront for more.</p>
- </div>
- 
-
-
-
+<router-outlet></router-outlet>
 <app-book-detail></app-book-detail>
