--- a/Lit.Client/Lit.Client.App/src/app/navbar/navbar.component.html
+++ b/Lit.Client/Lit.Client.App/src/app/navbar/navbar.component.html
@@ -8,7 +8,7 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item active">
-          <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="/home">Home <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">Store</a>
@@ -18,7 +18,7 @@
             Books
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <a class="dropdown-item" href="#">Catalog</a>
+            <a class="dropdown-item" href="/booklist">Catalog</a>
             <a class="dropdown-item" href="#">Popular</a>
             <div class="dropdown-divider"></div>
             <a class="dropdown-item" href="#">Favorites</a>
