--- a/Lit.Client/Lit.Client.App/src/app/account/login.component.html
+++ b/Lit.Client/Lit.Client.App/src/app/account/login.component.html
@@ -1,1 +1,22 @@
-<p>login works!</p>
+<div>
+  <h1>Login</h1>
+  <div>
+    <form [formGroup]="form" (ngSubmit)="onSubmit()">
+      <div>
+        <label>UserName: </label>
+        <input type="text" formControlName="username"/>
+      </div>
+      <div>
+        <label>Password: </label>
+        <input type="password" formControlName="password">
+      </div>
+      <div>
+        <button [disabled]="loading">
+          <span *ngIf="loading"></span>
+          Login
+        </button>
+        <a routerLink="../register">Register</a>
+      </div>
+    </form>
+  </div>
+</div>
