Added Some Comments to accounts folder

--- a/Lit.Client/Lit.Client.App/src/app/account/layout.component.html
+++ b/Lit.Client/Lit.Client.App/src/app/account/layout.component.html
@@ -1,3 +1,7 @@
+<!-- Potentially use this to have some theme for  the register and login pages
+  but still figuring out how to use bootstrap :( -->
 <div>
+  <!-- this should put router to all account components and router has been initialized in constructor
+    so should be good-->
   <router-outlet></router-outlet>
 </div>
