--- a/Lit.Client/Lit.Client.App/src/app/account/login.component.html
+++ b/Lit.Client/Lit.Client.App/src/app/account/login.component.html
@@ -1,6 +1,8 @@
 <div>
   <h1>Login</h1>
   <div>
+    <!-- pass in form to form variable and end on onsubmiy
+      still have to print error messages with validators-->
     <form [formGroup]="form" (ngSubmit)="onSubmit()">
       <div>
         <label>UserName: </label>
