--- a/Lit.Client/Lit.Client.App/src/app/account/layout.component.html
+++ b/Lit.Client/Lit.Client.App/src/app/account/layout.component.html
@@ -3,5 +3,6 @@
 <div>
   <!-- this should put router to all account components and router has been initialized in constructor
     so should be good-->
+  <h1>We made it to Layout!!!! Celebrate time</h1>
   <router-outlet></router-outlet>
 </div>
