--- a/Lit.Client/Lit.Client.App/src/app/navbar/navbar.component.html
+++ b/Lit.Client/Lit.Client.App/src/app/navbar/navbar.component.html
@@ -35,7 +35,13 @@
         </li>
       </ul>
       
-      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Login</button>
+      <div *ngIf="hasUser(); else elseBlock">
+        <button class="btn btn-outline-success my-2 my-sm-0" (click)="navigateToHome()">Logout</button>
+      </div>
+      <ng-template #elseBlock>
+        <button class="btn btn-outline-success my-2 my-sm-0" (click)="navigateToAccount()">Login</button>
+      </ng-template>
+      
       
     </div>
   </nav> 
