fixed routing to login and register

--- a/Lit.Client/Lit.Client.App/src/app/navbar/navbar.component.html
+++ b/Lit.Client/Lit.Client.App/src/app/navbar/navbar.component.html
@@ -39,7 +39,8 @@
         <button class="btn btn-outline-success my-2 my-sm-0" (click)="navigateToHome()">Logout</button>
       </div>
       <ng-template #elseBlock>
-        <button class="btn btn-outline-success my-2 my-sm-0" (click)="navigateToAccount()">Login</button>
+        <button class="btn btn-outline-success my-2 my-sm-0" (click)="navigateToRegister()">Register</button>
+        <button class="btn btn-outline-success my-2 my-sm-0" (click)="navigateToLogin()">Login</button>
       </ng-template>
       
       
