--- a/Lit.Client/Lit.Client.App/src/app/account/register.component.html
+++ b/Lit.Client/Lit.Client.App/src/app/account/register.component.html
@@ -1,6 +1,6 @@
 <div>
   <h1>Register</h1>
-  <!-- <div>
+  <div>
     <form [formGroup]="form" (ngSubmit)="onSubmit()">
       <div>
         <label>First Name: </label>
@@ -26,5 +26,5 @@
         <a routerLink="../login">Cancel</a>
       </div>
     </form>
-  </div> -->
+  </div>
 </div>
