--- a/Lit.Client/Lit.Client.App/src/app/navbar/navbar.component.html
+++ b/Lit.Client/Lit.Client.App/src/app/navbar/navbar.component.html
@@ -28,10 +28,10 @@
           <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
         </li>
         <li>
-          <form class="form-inline">
-            <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-          </form>
+         <!-- <form class="form-inline">
+            <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search" #search>
+            <button class="btn btn-outline-success my-2 my-sm-0" type="submit" (click)="searchDatabase(search.value)">Search</button>
+          </form>--><app-searchbox [router]="router"></app-searchbox> 
         </li>
       </ul>
       
