--- a/Lit.Client/Lit.Client.App/src/app/users/listuser.component.html
+++ b/Lit.Client/Lit.Client.App/src/app/users/listuser.component.html
@@ -10,11 +10,11 @@
     </tr>
     <tr>
         <!--Thinking here is where we use string interprolation like {{username}} -->
-      <td>{{user.firstName}}</td>
-      <td>{{user.lastName}}</td>
-      <td>{{user.username}}</td>
-      <td>{{user.password}}</td>
-      <td>{{user.email}}</td>
+      <!-- <td>{{this.user.firstName}}</td>
+      <td>{{this.user.lastName}}</td>
+      <td>{{this.user.username}}</td>
+      <td>{{this.user.password}}</td>
+      <td>{{this.user.email}}</td> -->
     </tr>
   </table>
 <br>
