--- a/Lit.Client/Lit.Client.App/src/app/users/editinfo.component.html
+++ b/Lit.Client/Lit.Client.App/src/app/users/editinfo.component.html
@@ -1,4 +1,4 @@
-<form [formGroup] = "form" (ngSubmit)="onSubmit()">
+<form [formGroup] = "form" (ngSubmit)="OnSubmit()">
     <ul>
       <li>
         <label for="name">Username:</label>
