--- a/Lit.Client/Lit.Client.App/src/app/booklist/booklist.component.html
+++ b/Lit.Client/Lit.Client.App/src/app/booklist/booklist.component.html
@@ -8,10 +8,9 @@
     <app-navbar></app-navbar>
 </header>
 
+<div class="mainContent">
+<h1 class="title1"> Book List!</h1>
 
-
-<h1>This is where I'd put my table of books... IF I HAD ONE !!!!!</h1>
-<p> or could get it lol</p>
 
 <div class="tableDiv">
 <table id = "book-table" class="table table-striped table-hover">
@@ -30,6 +29,7 @@
     </tr>
     </tbody>
   </table>
+</div>
 </div>
 <script>src = "booklist.component.ts"</script>
 
