--- a/Lit.Client/Lit.Client.App/src/app/account/register.component.html
+++ b/Lit.Client/Lit.Client.App/src/app/account/register.component.html
@@ -19,6 +19,10 @@
         <input type="password" formControlName="password">
       </div>
       <div>
+        <label>Email: </label>
+        <input type="email" formControlName="email">
+      </div>
+      <div>
         <button [disabled]="loading">
           <span *ngIf="loading"></span>
           Register
