Added user initialization in app component

--- a/Lit.Client/Lit.Client.App/src/app/landing/landing.component.html
+++ b/Lit.Client/Lit.Client.App/src/app/landing/landing.component.html
@@ -1,4 +1,5 @@
 <div class="logo" stlye="text-align: center">
+    <h1>Hi {{user?.firstName}}!</h1>
     <h1>Welcome to Lit.</h1>
     <p>Keep track of your book tendencies and find new series to explore.</p>
     <hr>
