got the interceptors to work

--- a/Lit.Client/Lit.Client.App/src/app/home/home.component.html
+++ b/Lit.Client/Lit.Client.App/src/app/home/home.component.html
@@ -2,6 +2,7 @@
     <app-navbar></app-navbar>
 </header>
 <div class="logo">
+  <h1>Hi {{user?.firstName}}!</h1>
     <img src="../assets/book-logo.png" alt="book logo" width="250pt" height="250pt">
     <h1 >Lit</h1>
     <p>Welcome to our Book App, here you can track books you've read or explore our storefront for more.</p>
