--- a/Lit.Client/Lit.Client.App/src/app/booklist/booklist.component.html
+++ b/Lit.Client/Lit.Client.App/src/app/booklist/booklist.component.html
@@ -15,10 +15,10 @@
 <div class="tableDiv">
 <table id = "book-table" class="table table-striped table-hover">
     <thead>
-      <th>Book Name</th>
+      <th>Book Title</th>
       <th>Author</th>
-      <th>Publish date</th>
-      <th>Book details</th>
+      <th>ISBN number</th>
+      <th>Category</th>
     </thead>
     <tbody>
       <tr class="records" *ngFor="let book of books">
@@ -26,6 +26,7 @@
         <th>{{book.author}}</th>
         <th>{{book.isbn}}</th>
         <th>{{book.categoryName}}</th>
+        <th><a [routerLink]= "['/book-detail/{{book.isbn}}']">Details</a></th>
     </tr>
     </tbody>
   </table>
