--- a/Lit.Client/Lit.Client.App/src/app/booklist/booklist.component.html
+++ b/Lit.Client/Lit.Client.App/src/app/booklist/booklist.component.html
@@ -26,7 +26,7 @@
         <th>{{book.author}}</th>
         <th>{{book.isbn}}</th>
         <th>{{book.categoryName}}</th>
-        <th><a [routerLink]= "['/book-detail/{{book.isbn}}']">Details</a></th>
+        <th><a [routerLink]= "['/book-detail/', book.isbn]">Details</a></th>
     </tr>
     </tbody>
   </table>
