linked userinfo to button and created wishlist button

--- a/Lit.Client/Lit.Client.App/src/app/navbar/navbar.component.html
+++ b/Lit.Client/Lit.Client.App/src/app/navbar/navbar.component.html
@@ -36,6 +36,7 @@
       </ul>
       
       <div *ngIf="hasUser(); else elseBlock">
+        <button class="btn btn-outline-success my-2 my-sm-0" (click)="navigateToWishList()">Wishlist</button>
         <button class="btn btn-outline-success my-2 my-sm-0" (click)="navigateToUserInfo()">AccntInfo</button>
         <button class="btn btn-outline-success my-2 my-sm-0" (click)="navigateToHome()">Logout</button>
       </div>
