Fix: Search-result to book-detail router-link
navbar fix for book-detail

--- a/Lit.Client/Lit.Client.App/src/app/book-detail/book-detail.component.html
+++ b/Lit.Client/Lit.Client.App/src/app/book-detail/book-detail.component.html
@@ -1,3 +1,7 @@
+<header>
+    <app-navbar></app-navbar>
+</header>
+
 <div class="background">
     <div class="container">
         <div class="card shadow p-3 mb-5 bg-white rounded">
