--- a/Lit.Client/Lit.Client.App/src/app/navbar/navbar.component.html
+++ b/Lit.Client/Lit.Client.App/src/app/navbar/navbar.component.html
@@ -1,7 +1,7 @@
 
 
 <nav class="navbar navbar-expand-lg navbar-light bg-primary">
-  <a class="navbar-brand" href="#">Lit</a>
+  <a class="navbar-brand" href="#"><img src="/assets/Lit.png" style="height: 48px; width: auto;"></a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
