--- a/Lit.Client/Lit.Client.App/src/app/booklist/booklist.component.css
+++ b/Lit.Client/Lit.Client.App/src/app/booklist/booklist.component.css
@@ -2,11 +2,20 @@
     background-color: antiquewhite;
 }
 .tableDiv{
-    background-color: antiquewhite;
+    display: inline-block;
+    background-color: white;
+    margin: 50px;
+    margin-left: 50%;
+    transform: translateX(-50%);
+    border-radius: 25px;
+    border: 2px solid #73AD21;
+    padding-left: 48px;
+    padding-right: 48px;
+    
 }
 .table{
     background-color: yellowgreen;
-    margin: 50pt;
+    margin: 50pt auto;
     width: fit-content;
 }
 .records{
@@ -15,10 +24,17 @@
 .TD{
     width:750pt;
 }
+th{
+    background-color: black;
+    color: orange;
+}
 .title1{
-    margin-left: 250pt;
-    margin-top: 100pt;
+    text-align: center;
+    padding: 24px;
+
 }
 .mainContent{
-    display: flexbox;
+    display: block;
+    margin:auto;
 }
+
