--- a/Lit.Client/Lit.Client.App/src/app/booklist/booklist.component.html
+++ b/Lit.Client/Lit.Client.App/src/app/booklist/booklist.component.html
@@ -9,24 +9,26 @@
 </header>
 
 <div class="mainContent">
-<h1 class="title1"> Book List!</h1>
+
 
 
 <div class="tableDiv">
+  <h1 class="title1"> Book List!</h1>
 <table id = "book-table" class="table table-striped table-hover">
     <thead>
       <th>Book Title</th>
       <th>Author</th>
       <th>ISBN number</th>
       <th>Category</th>
+      <th></th>
     </thead>
     <tbody>
       <tr class="records" *ngFor="let book of books">
-        <th>{{book.title}}</th>
-        <th>{{book.author}}</th>
-        <th>{{book.isbn}}</th>
-        <th>{{book.categoryName}}</th>
-        <th><a [routerLink]= "['/book-detail/', book.isbn]">Details</a></th>
+        <td>{{book.title}}</td>
+        <td>{{book.author}}</td>
+        <td>{{book.isbn}}</td>
+        <td>{{book.categoryName}}</td>
+        <td><a [routerLink]= "['/book-detail/', book.isbn]">Details</a></td>
     </tr>
     </tbody>
   </table>
