--- a/Lit.Client/Lit.Client.App/src/app/home/home.component.css
+++ b/Lit.Client/Lit.Client.App/src/app/home/home.component.css
@@ -10,3 +10,20 @@
 body {
     background-color: antiquewhite;
 }
+
+.container {
+
+  padding: 1%;
+  margin: 1%;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.description{
+  background-color: white;
+  border-radius: 25px;
+  border: 2px solid #73AD21;
+  padding: 20px;
+  font-size: 20px;
+
+}
