--- a/Lit.Client/Lit.Client.App/src/app/users/editinfo.component.html
+++ b/Lit.Client/Lit.Client.App/src/app/users/editinfo.component.html
@@ -2,23 +2,19 @@
     <ul>
       <li>
         <label for="name">Username:</label>
-        <input type="text" id="username" name="user_name" />
-      </li>
-      <li>
-        <label for="password">Password:</label>
-        <input type="password" id="password" name="password" />
+        <input type="text" formControlName="username"/>
       </li>
       <li>
         <label for="email">Email:</label>
-        <input type="email" id="email" name="user_email" />
+        <input type="email" formControlName="email"/>
       </li>
       <li>
         <label for="fname">First Name:</label>
-        <input type="text" id="fname" name="first_name" />
+        <input type="text" formControlName="firstName"/>
       </li>
       <li>
         <label for="lname">Last Name:</label>
-        <input type="text" id="lname" name="last_name" />
+        <input type="text" formControlName="lastName"/>
       </li>
       <br>
       <button (click)="ReturnToInfo()">Cancel</button>
