--- a/Lit.Client/Lit.Client.App/src/app/navbar/navbar.component.html
+++ b/Lit.Client/Lit.Client.App/src/app/navbar/navbar.component.html
@@ -1,6 +1,6 @@
 
 
-<nav class="navbar navbar-expand-lg navbar-light bg-primary">
+<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
   <a class="navbar-brand" href="#"><img src="/assets/Lit.png" style="height: 48px; width: auto;"></a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -26,7 +26,7 @@
         </div>
       </li>
       <li class="nav-item">
-        <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+
       </li>
       <li>
         <!-- <form class="form-inline">
@@ -38,7 +38,7 @@
 
     <div *ngIf="hasUser(); else elseBlock">
       <button class="btn btn-outline-success my-2 my-sm-0" (click)="navigateToWishList()">Wishlist</button>
-      <button class="btn btn-outline-success my-2 my-sm-0" (click)="navigateToUserInfo()">AccntInfo</button>
+      <button class="btn btn-outline-success my-2 my-sm-0" (click)="navigateToUserInfo()">Profile</button>
       <button class="btn btn-outline-success my-2 my-sm-0" (click)="navigateToHome()">Logout</button>
     </div>
     <ng-template #elseBlock>
