Fix: WishList Componenent

--- a/Lit.Client/Lit.Client.App/src/app/wishlist/wishlist.component.html
+++ b/Lit.Client/Lit.Client.App/src/app/wishlist/wishlist.component.html
@@ -1,5 +1,5 @@
 <head>
-    <link rel="stylesheet" href = "booklist.component.css">
+    <link rel="stylesheet" href = "wishlist.component.css">
 </head>
 
 <body class="BG">
